--- a/DBOperationsWithEfCore/appsettings.json
+++ b/DBOperationsWithEfCore/appsettings.json
@@ -1,14 +1,15 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "AppDb": "Server=localhost;Datbase=sampleEF;"
+        "AppDb": "server=localhost;database=BookDb;user=root;password=Shady004@"
     }
+
 
 }
 
