--- a/DBOperationsWithEfCore/DBOperationsWithEfCore.csproj
+++ b/DBOperationsWithEfCore/DBOperationsWithEfCore.csproj
@@ -22,6 +22,7 @@
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.16" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.12" />
   </ItemGroup>
 
 </Project>
